Update to Java 17 and fix gradle files to work with 9.6.1