@@ -1,31 +1,33 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.beryx.runtime' version '1.12.7'
+    id 'org.beryx.runtime' version '2.0.1'
 }
 
-sourceCompatibility = '8'
+//sourceCompatibility = '8'
 
 repositories {
     mavenCentral()
+    maven { url = "https://jitpack.io" }
 }
 
 dependencies {
-    implementation 'commons-io:commons-io:2.7'
+    implementation 'commons-io:commons-io:2.22.0'
     implementation 'com.github.wendykierp:JTransforms:3.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.google.code.gson:gson:2.14.0'
+    implementation 'org.slf4j:slf4j-api:2.0.18'
+    implementation 'org.slf4j:slf4j-simple:2.0.18'
     implementation 'pl.edu.icm:JLargeArrays:1.6'
 }
 
 application {
-    mainClassName = "io.github.dsheirer.jmbe.creator.Creator"
+    mainClass = "io.github.dsheirer.jmbe.creator.Creator"
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 
 jar {
     manifest {
-        attributes 'Implementation-Title': "${project.archivesBaseName}",
+        attributes 'Implementation-Title': "JMBE",
                    'Implementation-Version': archiveVersion
     }
     from rootProject.file('LICENSE')
